force-app/main/default/objects/Installed_Products__c/Installed_Products__c.object-meta.xml
<CustomObject>
    <label>Installed Product</label>
    <nameField>
        <label>Installed Products Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Installed Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>