force-app/main/default/objects/Installed_Products__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Installed Products</relationshipLabel>
    <relationshipName>Installed_Products</relationshipName>
    <type>Lookup</type>
</CustomField>