force-app/main/default/objects/Installed_Products__c/fields/Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Contract</label>
    <referenceTo>Service_Contract__c</referenceTo>
    <relationshipLabel>Installed Products</relationshipLabel>
    <relationshipName>Installed_Products</relationshipName>
    <type>Lookup</type>
</CustomField>